<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ch3d.ifttt.batterywatchdog.MainActivity">

    <EditText
        android:id="@+id/edit_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_hint_ifttt_key" />

    <CheckBox
        android:id="@+id/checkbox_custom_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/main_enable_custom_device_name" />

    <EditText
        android:id="@+id/edit_custom_device_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_custom_device_name" />

    <CheckBox
        android:id="@+id/checkbox_custom_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/main_enable_custom_event_name" />

    <EditText
        android:id="@+id/edit_custom_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_custom_event" />

    <Button
        android:id="@+id/btn_save"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/action_save" />
</LinearLayout>
